was added: - api's - db_schema - migrations - foundament for auth services and other api's
