# go_backend/api/swagger.yaml
@@ -1,8 +1,22 @@
-basePath: /api/v1
+basePath: /api
+definitions:
+  models.Track:
+    properties:
+      artist_id:
+        type: string
+      artists:
+        type: string
+      id:
+        type: integer
+      preview_url:
+        type: string
+      title:
+        type: string
+    type: object
 externalDocs:
   description: OpenAPI
   url: https://swagger.io/resources/open-api/
-host: localhost:8080
+host: localhost:8000
 info:
   contact:
     email: support@swagger.io
@@ -14,7 +28,111 @@ info:
   termsOfService: http://swagger.io/terms/
   title: Swagger REST API
   version: "1.0"
-paths: {}
+paths:
+  /select_artist/{id}:
+    post:
+      consumes:
+      - application/json
+      description: Select an artist by their ID and process it via Redis
+      parameters:
+      - description: Artist ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Select Artist by ID
+      tags:
+      - admin
+  /tracks:
+    get:
+      description: '-'
+      parameters:
+      - description: query
+        in: query
+        name: query
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Track'
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Search tracks by query
+      tags:
+      - tracks
+  /tracks/{id}:
+    get:
+      description: '-'
+      parameters:
+      - description: track ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Track'
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get track by id
+      tags:
+      - tracks
+  /tracks/similar/{id}:
+    get:
+      description: '-'
+      parameters:
+      - description: track_id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Track'
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get similar tracks by track_id
+      tags:
+      - tracks
 securityDefinitions:
   JWT:
     type: basic
