# go_backend/internal/models/track.go
@@ -1,9 +1,10 @@
 package models
 
 type Track struct {
-    ArtistID   string `gorm:"column:artist_id" json:"artist_id"`
-    Artists    string `gorm:"column:artists" json:"artists"`
-    Title      string `gorm:"column:title" json:"title"`
-    PreviewUrl string `gorm:"column:preview_url;unique;not null" json:"preview_url"`
-    Signature  string `gorm:"column:signature" json:"signature"`
+	ID         int       `json:"id"`
+	ArtistID   string    `json:"artist_id"`
+	Artists    string    `json:"artists"`
+	Title      string    `json:"title"`
+	PreviewUrl string    `json:"preview_url"`
+	// Signature  []float64 `json:"-"`
 }
